<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity"
    android:background="@drawable/jjjjjj">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ic"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/otpverify">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textStyle="bold"
            android:textColor="#FF1100"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_have_sent_otp_on_your_number"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <com.chaos.view.PinView
                android:id="@+id/code"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18sp"
                app:itemCount="6"
                app:itemHeight="58dp"
                app:itemRadius="8dp"
                android:textColor="@color/white"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:lineColor="@android:color/black"
                app:viewType="rectangle"
                tools:ignore="MissingClass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/resend_code_in_10_second"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/resendbtn"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:text="@string/resend_otp"
                    android:textColor="#ffff" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:text="@string/submit"
                    android:id="@+id/submit"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textColor="#ffff" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>